<resources>
    <string name="app_name">My Calendar</string>
    <string name="action_view_edit">View/Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_move">Move</string>
    <string name="action_settings">Settings</string>
    <string name="calendar_month_name">Month Name</string>
    <string name="calendar_sun">Sun</string>
    <string name="calendar_mon">Mon</string>
    <string name="calendar_tue">Tue</string>
    <string name="calendar_wed">Wed</string>
    <string name="calendar_thu">Thu</string>
    <string name="calendar_fri">Fri</string>
    <string name="calendar_sat">Sat</string>
    <string name="gridview_cell_text">20</string>
    <string name="menu_search_title">Search Appointment</string>
    <string name="search_hint">Search Appointment</string>
</resources>
