<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="100"
        android:title="@string/action_view_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_remove"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_action_move"
        android:orderInCategory="100"
        android:title="@string/action_move"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>