<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <RelativeLayout
        android:id="@+id/rlCalendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="12dp">

        <ImageView
            android:id="@+id/calendarPrev"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_calendar_pre" />

        <ImageView
            android:id="@+id/calendarNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_calendar_next" />

        <TextView
            android:id="@+id/calendarMonthLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/calendarNext"
            android:layout_toRightOf="@id/calendarPrev"
            android:gravity="center"
            android:text="@string/calendar_month_name"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calendarDaysOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlCalendarHeader"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_36sdp"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_sun"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_mon"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_tue"
            android:textSize="13sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_wed"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_thu"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_fri"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_sat"
            android:textSize="12sp" />

    </LinearLayout>

    <GridView
        android:id="@+id/gvCalendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendarDaysOfWeek"
        android:background="@color/colorGridViewSeperator"
        android:horizontalSpacing="0dp"
        android:numColumns="7"
        android:paddingRight="0dp"
        android:verticalSpacing="1dp" />
</merge>